# polygraph

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/polygraph/: __init__.py  cli.py  client.py  config.py  embeddings.py  fetch.py  graph.py  prices.py  store.py  update.py
src/polygraph/infer/: __init__.py  anchors.py  audit.py  context.py  corpus.py  domain.py  empirical.py  entities.py  models.py  pipeline.py  semantic.py  structural.py  temporal.py  text_rules.py  validate.py
src/polygraph/vector/: __init__.py  anchor.py  index.py  model.py  text.py
src/polygraph/web/: graph_service.py  server.py
src/polygraph/web/static/: app.js  index.html  style.css
