[project]
name = "polygraph"
version = "0.1.0"
description = "Map Polymarket markets as an interaction graph (read-only, no trading)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "networkx>=3.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "click>=8.1",
    "rich>=13.7",
    "lxml>=5.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
viz = [
    "pyvis>=0.3",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
polygraph = "polygraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polygraph"]

[tool.hatch.build.targets.wheel.force-include]
"src/polygraph/web/static" = "polygraph/web/static"
